# TeeStream

./: CMakeLists.txt  LICENSE  README.md  benchmark.sh  build.sh
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: teestreamConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  simple_tcp_server.py  socket_example.cpp
include/: TeeStream.h
src/: TeeStream.cpp
tests/: CMakeLists.txt  test_teestream.cpp
